--- a/org.osgi.service.jpa/.project
+++ b/org.osgi.service.jpa/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.osgi.impl.service.jpa</name>
+	<name>org.osgi.service.jpa</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -10,14 +10,8 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>com.ibm.ws.rasplugin.RASValidationBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>com.ibm.ws.rasplugin.RASValidationNature</nature>
 	</natures>
 </projectDescription>
