Update projects to compile with target jsr14 and work with framework RI development

--- a/org.osgi.framework/.settings/org.eclipse.jdt.core.prefs
+++ b/org.osgi.framework/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,7 @@
-#Wed Sep 23 14:36:17 EDT 2009
+#Tue Oct 06 16:55:07 EDT 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=jsr14
 org.eclipse.jdt.core.compiler.codegen.unusedLocal=preserve
 org.eclipse.jdt.core.compiler.compliance=1.5
 org.eclipse.jdt.core.compiler.debug.lineNumber=generate
