Add composite API to -runpath for framework RI development.

--- a/org.osgi.service.composite/.settings/org.eclipse.jdt.core.prefs
+++ b/org.osgi.service.composite/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Sat Nov 05 01:43:11 EST 2005
+#Wed Sep 23 14:35:33 EDT 2009
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=disabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
