add foundation ee to handle GCF references in javadoc

--- a/osgi.companion/build.xml
+++ b/osgi.companion/build.xml
@@ -27,6 +27,7 @@
 			charset="UTF-8">
 		    <bootclasspath>
       			<pathelement location="${repo}/ee.j2se/ee.j2se-1.5.0.jar"/>
+      			<pathelement location="${repo}/ee.foundation/ee.foundation-1.1.0.jar"/>
     		</bootclasspath>
 		    <classpath>
       			<pathelement location="${licensed-repo}/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar"/>
